# kssdrone

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  adc_battery.cpp  adc_battery.h  buzzer_led.h  delta_timer.h  drone_cmd.h  ekf.h  espnow_interface.cpp  espnow_interface.h  filter_biquad.h  flight_pid.h  flight_pid_config.h  flight_profile.h  flight_tune_config.h  gpio_config.cpp  gpio_config.h  idf_component.yml  imu_icm42688p.cpp  imu_icm42688p.h  imu_interface.cpp  imu_interface.h  kss_crsf_receiver.cpp  kss_crsf_receiver.h  kss_drone.cpp  kss_drone.h  kss_drone_armed.cpp  kss_drone_background.cpp  kss_drone_compensation.cpp  kss_drone_config.h  kss_drone_state.cpp  kss_drone_stats.h  kss_drone_task.cpp  led.cpp  led.h  main.cpp  memo.txt  motor.cpp  motor.h  motor_interface.cpp  motor_interface.h  (+5 more)
